--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Picking/Ribbon/CanalRibbon.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Picking/Ribbon/CanalRibbon.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ScienceAndMaths.Client.Modules.Picking.Ribbon.PickingRibbon"
+﻿<UserControl x:Class="ScienceAndMaths.Client.Modules.Picking.Ribbon.CanalRibbon"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
