--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ScienceAndMaths.Client.Modules.Picking.Views.CanalView"
+﻿<UserControl x:Class="ScienceAndMaths.Client.Modules.Canal.Views.CanalView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
