--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/LocationView.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/LocationView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ScienceAndMaths.Client.Modules.Picking.Views.LocationView"
+﻿<UserControl x:Class="ScienceAndMaths.Client.Modules.Canal.Views.LocationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ScienceAndMaths.Client.Modules.Picking.Views"
+             xmlns:local="clr-namespace:ScienceAndMaths.Client.Modules.Canal.Views"
              xmlns:controls="clr-namespace:ScienceAndMaths.Client.Controls;assembly=ScienceAndMaths.Client.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
