Implementing loading of configurations

--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Ribbon/CanalRibbon.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Ribbon/CanalRibbon.xaml
@@ -21,7 +21,7 @@
             <RibbonTab Header="Home" KeyTip="H" >
                 <RibbonGroup Header="Actions">
                     <controls:ScienceAndMathsBackRibbonButton LargeImageSource="pack://application:,,,/ScienceAndMaths.Client.Shared;component/Images/back_icon.png" KeyTip="X" />
-                    <RibbonButton Command="" Label="Load canal" LargeImageSource="pack://application:,,,/ScienceAndMaths.Client.Shared;component/Images/load_icon.png"/>
+                    <RibbonButton Command="{Binding LoadCanalCommand}" Label="Load canal" LargeImageSource="pack://application:,,,/ScienceAndMaths.Client.Shared;component/Images/load_icon.png"/>
                 </RibbonGroup>                
             </RibbonTab>
             <!-- Ribbon Tab #2: -->
