--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
@@ -6,7 +6,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
-    <Grid>
+    <Canvas Name="canalCanvas" DataContext="{Binding Path=Canal}" DataContextChanged="CanalCanvas_OnDataContextChanged"/>
+    <!--<Grid>
         <Grid.Resources>
             <ResourceDictionary>
                 <ResourceDictionary.MergedDictionaries>
@@ -68,5 +69,5 @@
                 <TextBlock Grid.Row="1" Style="{StaticResource TextBlockStyle}" Text="{Binding Path=InventoryInformation.ItemLocation}" />
             </Grid>
         </Grid>
-    </Grid>
+    </Grid>-->
 </UserControl>
