Simulation execution done

--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Ribbon/CanalRibbon.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Ribbon/CanalRibbon.xaml
@@ -22,6 +22,7 @@
                 <RibbonGroup Header="Actions">
                     <controls:ScienceAndMathsBackRibbonButton LargeImageSource="pack://application:,,,/ScienceAndMaths.Client.Shared;component/Images/back_icon.png" KeyTip="X" />
                     <RibbonButton Command="{Binding LoadCanalCommand}" Label="Load canal" LargeImageSource="pack://application:,,,/ScienceAndMaths.Client.Shared;component/Images/load_icon.png"/>
+                    <RibbonButton Command="{Binding SimulateCanalCommand}" Label="Simulate canal" LargeImageSource="pack://application:,,,/ScienceAndMaths.Client.Shared;component/Images/play_icon.png"/>
                 </RibbonGroup>                
             </RibbonTab>
             <!-- Ribbon Tab #2: -->
