--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
@@ -6,5 +6,5 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
-    <Canvas Name="canalCanvas" DataContext="{Binding Path=Canal}" DataContextChanged="CanalCanvas_OnDataContextChanged"/>
+    <Canvas Name="canalCanvas" DataContext="{Binding Path=CanalData}" DataContextChanged="CanalCanvas_OnDataContextChanged"/>
 </UserControl>
