--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
@@ -14,6 +14,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50"/>
             <ColumnDefinition Width="75*"/>
+            <ColumnDefinition Width="5"/>
             <ColumnDefinition Width="25*"/>
         </Grid.ColumnDefinitions>
         <Label Name="zoomLabel" Content="100%"
@@ -42,5 +43,33 @@
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center"/>
         </ScrollViewer>
+        <GridSplitter Grid.Column="2" Grid.Row="1" Width="5" HorizontalAlignment="Stretch" />
+        <Grid Grid.Row="1" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="33*"/>
+                <ColumnDefinition Width="33*"/>
+                <ColumnDefinition Width="33*"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="0">Length</Label>
+            <Label Grid.Row="0" Grid.Column="1" Content="{Binding Path=ActiveCanalStretch.Length}"/>
+            <Label Grid.Row="0" Grid.Column="2">(m)</Label>
+
+            <Label Grid.Row="1" Grid.Column="0">Flow</Label>
+            <Label Grid.Row="1" Grid.Column="1" Content="{Binding Path=ActiveCanalStretch.Flow}"/>
+            <Label Grid.Row="1" Grid.Column="2">(m3/s)</Label>
+
+            <Label Grid.Row="2" Grid.Column="0">Manning Roughness</Label>
+            <Label Grid.Row="2" Grid.Column="1" Content="{Binding Path=ActiveCanalStretch.CanalSection.Roughness}"/>
+
+            <Label Grid.Row="3" Grid.Column="0">Slope</Label>
+            <Label Grid.Row="3" Grid.Column="1" Content="{Binding Path=ActiveCanalStretch.CanalSection.Slope}"/>
+            <Label Grid.Row="3" Grid.Column="2">(m/m)</Label>
+        </Grid>
     </Grid>
 </UserControl>
