Cursor to display solution

--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
@@ -37,6 +37,7 @@
             <Canvas Name="canalCanvas" 
                     DataContext="{Binding Path=CanalData}" 
                     DataContextChanged="CanalCanvas_OnDataContextChanged"
+                    MouseDown="CanalCanvas_OnMouseDown"
                     Background="White"
                     Width="900"
                     Height="450"
