--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
@@ -45,7 +45,7 @@
                     HorizontalAlignment="Center"/>
         </ScrollViewer>
         <GridSplitter Grid.Column="2" Grid.Row="1" Width="5" HorizontalAlignment="Stretch" />
-        <Grid Grid.Row="1" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid Grid.Row="0" Grid.RowSpan="2" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Controls:ScienceAndMathsPropertyGrid DataContext="{Binding Path=ActiveCanalGeometryData}"/>
         </Grid>
     </Grid>
