--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/Canal/Views/CanalView.xaml
@@ -38,6 +38,7 @@
                     DataContext="{Binding Path=CanalData}" 
                     DataContextChanged="CanalCanvas_OnDataContextChanged"
                     MouseDown="CanalCanvas_OnMouseDown"
+                    MouseMove="CanalCanvas_OnMouseMove"
                     Background="White"
                     Width="900"
                     Height="450"
